# cpp-final-project

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
html/: index.html  login.html  server.html
sql/: init.sql
src/: db.cpp  db.h  main.cpp  message.cpp  message.h  server.cpp  server.h  user.cpp  utils.cpp  utils.h
src/api/: README.md  auth.cpp  auth.h  channels.cpp  channels.h  messaging.cpp  servers.cpp  servers.h  users.cpp  users.h
src/services/: auth.cpp  auth.h  channels.cpp  channels.h  messagemanager.cpp  messagemanager.h  messaging.cpp  messaging.h  servers.cpp  servers.h  users.cpp  users.h
